--- a/.github/workflows/fetch_physionet.yml
+++ b/.github/workflows/fetch_physionet.yml
@@ -30,4 +30,5 @@ jobs:
           git config user.email "actions@github.com"
           git add sleep_edf_files.csv
           git commit -m "Update PhysioNet file list (auto)" || echo "No changes"
-          git push
+          git push origin main
+
